# Ku_ik

./: README.md
config/: control.ini  perception.ini  planning.ini
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: carla_msgs.pc  global_planning.pc  lane_detection.pc  lateral_control.pc  local_planning.pc  longitudinal_control.pc  traffic_light.pc
devel/share/carla_msgs/cmake/: carla_msgs-msg-extras.cmake  carla_msgs-msg-paths.cmake  carla_msgsConfig.cmake
devel/share/global_planning/cmake/: global_planningConfig.cmake
devel/share/lane_detection/cmake/: lane_detectionConfig.cmake
devel/share/lateral_control/cmake/: lateral_controlConfig.cmake
json/: objects_dynamic_vehicle_1.json  objects_dynamic_vehicle_2.json  objects_dynamic_vehicle_3.json  objects_lidar.json  objects_pedestrian_1.json  objects_pedestrian_2.json  sangryeol.json
resources/: dynamic_vehicle_3_waypoint.txt  waypoint_center.txt
shellscript/: carla.sh
src/control/dynamic_vehicle_control/: CMakeLists.txt  package.xml
src/control/lateral_control/: CMakeLists.txt  package.xml
src/control/longitudinal_control/: CMakeLists.txt  package.xml
src/control/pedestrian_control/: CMakeLists.txt  package.xml
src/control/point_control/: CMakeLists.txt  package.xml
src/detection_msgs/: CMakeLists.txt
src/detection_msgs/msg/: SensorFusion.msg
src/perception/lane_detection/: CMakeLists.txt
src/perception/lane_detection/sliding_window/: CMakeLists.txt  package.xml
src/perception/lane_detection/sliding_window/include/sliding_window/: sliding_window.h
src/perception/lane_detection/sliding_window/src/: sliding_window.cpp
src/perception/object_detection/: CMakeLists.txt  package.xml
src/perception/traffic_light/: CMakeLists.txt
src/planning/behavior_planning/: CMakeLists.txt  package.xml
src/planning/global_planning/: CMakeLists.txt  package.xml
src/preprocessing/: CMakeLists.txt  package.xml
src/preprocessing/config/: lidar.rviz
src/preprocessing/launch/: Lidar.launch
src/preprocessing/src/: preprocessing.cpp  projection.cpp  right_preprocess.cpp
src/yolov5_ros/launch/: yolov5.launch
(+48 files in other folders)
